--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="position-fixed w-100">
-        <div class="">
+        <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#">Veedah</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
