--- a/index.html
+++ b/index.html
@@ -339,19 +339,19 @@
                         <div class="contact-info col-md-5 col-sm-5 my-2">
                             <div class="contact-grid text-center">
                                 <div class="card py-3">
-                                    <i class="fa fa-2x fa-envelope-o" aria-hidden="true"></i>
+                                    <i class="fa mb-2 fa-2x fa-envelope-o" aria-hidden="true"></i>
                                     <h5 class="contact-text">Email</h5>
                                     <a href="mailto:veedahv55@gmail.com">veedahv55@gmail.com</a>
                                 </div>
                                 <div class="card my-2 py-3">
-                                    <i class="fa fa-2x fa-mobile" aria-hidden="true"></i>
+                                    <i class="fa mb-2 fa-2x fa-mobile" aria-hidden="true"></i>
                                     <h5 class="contact-text">Phone</h5>
                                     <a href="tel:+23470870050">+23470870050</a>
                                 </div>
                                 <div class="card py-3">
-                                    <i class="fa fa-2x fa-map-marker" aria-hidden="true"></i>
+                                    <i class="fa mb-2 fa-2x fa-map-marker" aria-hidden="true"></i>
                                     <h5 class="contact-text">Address</h5>
-                                    <p>Uyo, Akwa Ibom</p>
+                                    <p class="contact-text-address">Uyo, Akwa Ibom</p>
                                 </div>
                             </div>
                         </div>
