--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                                         <h4 class="edu-time">March 2020</h4>
                                     </div>
                                     <hr>                                    
-                                    <p class="contact-text">
+                                    <p class="edu-text">
                                         Learnt basic html and css skills
                                     </p>
                                 </div>
@@ -171,7 +171,7 @@
                                         <h4 class="edu-time">September 2020</h4>
                                     </div>
                                     <hr>
-                                    <p class="contact-text">
+                                    <p class="edu-text">
                                         Responsive web designs
                                     </p>
                                 </div>
@@ -183,7 +183,7 @@
                                         <h4 class="edu-time">August 2020 - September 2020</h4>
                                     </div>
                                     <hr>
-                                    <p class="contact-text">
+                                    <p class="edu-text">
                                         Learnt basic html and css skills
                                     </p>
                                 </div>
@@ -195,7 +195,7 @@
                                         <h4 class="edu-time">September 2015 - July 2017</h4>
                                     </div>
                                     <hr>
-                                    <p class="contact-text">
+                                    <p class="edu-text">
                                         Completed high school
                                     </p>
                                 </div>
@@ -255,8 +255,10 @@
                                     <img src="./images/weather-app.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h3 class="card-title p-1">Dashboard</h3>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
+                                        <p class="card-text">
+                                            I implemented a dashboard using html, css, bootstrap and js.
+                                            In this project, I made us of local stoeage to store variables. 
+                                        </p>
                                         <a href="https://vee-ecommerce-dashboard.netlify.app/" class="btn">Live Demo</a>
                                     </div>
                                 </div>
@@ -266,8 +268,9 @@
                                     <img src="./images/weather-app.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h3 class="card-title p-1">Weather App</h3>
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
+                                        <p class="card-text">
+                                            I made use of api in this site.
+                                        </p>
                                         <a href="https://veedahv-weather-app.netlify.app/" class="btn">Live Demo</a>
                                     </div>
                                 </div>
@@ -366,21 +369,21 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <i class="fa mb-2 fa-2x fa-envelope-o" aria-hidden="true"></i>
-                                        <h5 class="contact-text p-1">Email</h5>
+                                        <h3 class="contact-text">Email</h3>
                                         <a href="mailto:veedahv55@gmail.com">veedahv55@gmail.com</a>
                                     </div>
                                 </div>
                                 <div class="card">
                                     <div class="card-body">
                                         <i class="fa mb-2 fa-2x fa-mobile" aria-hidden="true"></i>
-                                        <h5 class="contact-text p-1">Phone</h5>
+                                        <h3 class="contact-text">Phone</h3>
                                         <a href="tel:+23470870050">+23470870050</a>
                                     </div>
                                 </div>
                                 <div class="card">
                                     <div class="card-body">
                                         <i class="fa mb-2 fa-2x fa-map-marker" aria-hidden="true"></i>
-                                        <h5 class="contact-text p-1">Address</h5>
+                                        <h3 class="contact-text">Address</h3>
                                         <p class="contact-text-address">Uyo, Akwa Ibom</p>
                                     </div>
                                 </div>
