--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 </button>
                 <div class="ml-auto desktop-nav" id="">
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link pl-0 pr-3 active" href="index.html">Home</span></a>
-                        <a class="nav-item nav-link px-3" href="#about-page">About Me</a>
-                        <a class="nav-item nav-link px-3" href="#skills-page">Skills</a>
-                        <a class="nav-item nav-link px-3" href="#project-page">My projects</a>
-                        <a class="nav-item nav-link pr-0 pl-3" href="#contact-page">Contact Me</a>
+                        <a class=" active" href="index.html">Home</span></a>
+                        <a class="" href="#about-page">About Me</a>
+                        <a class="" href="#skills-page">Skills</a>
+                        <a class="" href="#project-page">My projects</a>
+                        <a class="" href="#contact-page">Contact Me</a>
                     </div>
                 </div>
             </nav>
@@ -42,11 +42,11 @@
     </header>
     <div class="mobile-nav position-fixed py-5">
         <div class="position-absolute px-3 d-flex flex-column">
-            <a class="px-3 nav-link my-3 mobile-nav-link active" href="index.html">Home</span></a>
-            <a class="px-3 nav-link my-3 mobile-nav-link " href="#about-page">About Me</a>
-            <a class="px-3 nav-link my-3 mobile-nav-link " href="#skills-page">Skills</a>
-            <a class="px-3 nav-link my-3 mobile-nav-link " href="#project-page">My projects</a>
-            <a class="px-3 nav-link my-3 mobile-nav-link " href="#contact-page">Contact Me</a>
+            <a class="mobile-nav-link active" href="index.html">Home</span></a>
+            <a class="mobile-nav-link " href="#about-page">About Me</a>
+            <a class="mobile-nav-link " href="#skills-page">Skills</a>
+            <a class="mobile-nav-link " href="#project-page">My projects</a>
+            <a class="mobile-nav-link " href="#contact-page">Contact Me</a>
         </div>
     </div>
     <main>
@@ -109,7 +109,7 @@
                     <div class="col-md-6">
                         <div>
                             <h2 class="headings">
-                                My skill set
+                                Skill set
                             </h2>
                         </div>
                         <div class="grid skill-grid">
@@ -148,7 +148,7 @@
                     <div class="col-md-6">
                         <div>
                             <h2 class="headings">
-                                My education
+                                Education
                             </h2>
                         </div>
                         <div class="grid edu-grid">
@@ -207,7 +207,7 @@
                                         <h4 class="edu-time">September 2017 - Till date</h4>
                                     </div>
                                     <hr>
-                                    <p class="contact-text">
+                                    <p class="edu-text">
                                         Studying for a B.Sc for Computer Engineering
                                     </p>
                                 </div>
@@ -221,7 +221,7 @@
             <div class="container py-5">
                 <div>
                     <h2 class="headings">
-                        Here are a few of my projects
+                        Completed Projects
                     </h2>
                 </div>
                 <div>
@@ -430,10 +430,25 @@
     <script>
         AOS.init();
     </script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
+    <script>
+        (function() {
+  'use strict';
+
+  let section = document.querySelectorAll('section');
+  let sections = {};
+  let i = 0;
+
+  Array.prototype.forEach.call(section, function(e) {
+    sections[e.id] = e.offsetTop;
+  });
+
+  window.onscroll = function() {
+    let scrollPosition = document.documentElement.scrollTop || document.body.scrollTop;
+  };
+})();
+
+    </script>
 </body>
 
 </html>
