--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="https://twitter.com/me_veey?s=03" target="_blank" rel="noopener noreferrer" class="flex">
                         <i class="fa fa-twitter" aria-hidden="true"></i>
                     </a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer" class="flex mid-a">
+                    <a href="https://www.linkedin.com/in/victoria-akpan-3726361b0" target="_blank" rel="noopener noreferrer" class="flex mid-a">
                         <i class="fa fa-linkedin" aria-hidden="true"></i>
                     </a>
                     <a href="https://github.com/veedahv" target="_blank" rel="noopener noreferrer" class="flex">
@@ -398,7 +398,7 @@
                                 class="">
                                 <i class="fa fa-twitter" aria-hidden="true"></i>
                             </a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer" class="">
+                            <a href="https://www.linkedin.com/in/victoria-akpan-3726361b0" target="_blank" rel="noopener noreferrer" class="">
                                 <i class="fa fa-linkedin" aria-hidden="true"></i>
                             </a>
                             <a href="https://github.com/veedahv" target="_blank" rel="noopener noreferrer" class="">
@@ -407,7 +407,7 @@
                             <a href="http://" target="_blank" rel="noopener noreferrer" class="">
                                 <i class="fa fa-whatsapp" aria-hidden="true"></i>
                             </a>
-                            <a href="http://" target="_blank" rel="noopener noreferrer" class="">
+                            <a href="https://www.instagram.com/mhvee__e/" target="_blank" rel="noopener noreferrer" class="">
                                 <i class="fa fa-instagram" aria-hidden="true"></i>
                             </a>
                         </div>
