--- a/index.html
+++ b/index.html
@@ -328,35 +328,10 @@
         <section class="contact-page" id="contact-page">
             <div class="container">
                 <div class="contact-info ">
-                    <h1>Contact Me</h1>
-                    <p>Have an idea you want to bring to life?</p>
-                    <p>Or you want to say hi?</p>
-                    <p>Why not send me a message?</p>
                     <div class="grid contact-info-grid">
-                        <div class="">
-                            <form action="post" class="text-center">
-                                <label for="name" class="w-100">
-                                    <input type="text" class="py-1 px-2 w-100" name="name" id="name" placeholder="Name">
-                                </label>
-                                <label for="email" class="w-100">
-                                    <input type="email" class="py-1 px-2 w-100" name="email" id="email"
-                                        placeholder="E-Mail">
-                                </label>
-                                <label for="subject" class="w-100">
-                                    <input type="text" class="py-1 px-2 w-100" name="subject" id="subject"
-                                        placeholder="Subject">
-                                </label>
-                                <label for="message" class="w-100">
-                                    <textarea rows="5" class="w-100 py-1 px-2 w-100" name="message" id="message"
-                                        placeholder="Message"></textarea>
-                                </label>
-                                <label for="submit" class="py-2">
-                                    <button type="submit" class="button btn">SEND MESSAGE</button>
-                                </label>
-                            </form>
-                        </div>
                         <div class="contact-info">
-                            <div class="contact-grid text-center">
+                            <img src="./images/about-me.jpg" class="w-100" alt="">
+                            <!-- <div class="contact-grid text-center">
                                 <div class="card">
                                     <div class="card-body">
                                         <i class="fa mb-2 fa-2x fa-envelope-o" aria-hidden="true"></i>
@@ -378,7 +353,33 @@
                                         <p class="contact-text-address">Uyo, Akwa Ibom</p>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
+                        </div>
+                        <div class="">
+                    <h1>Contact Me</h1>
+                    <p>Have an idea you want to bring to life?</p>
+                    <p>Or you want to say hi?</p>
+                            <p>Why not send me a message?</p>
+                            <form action="post" class="text-center">
+                                <label for="name" class="w-100">
+                                    <input type="text" class="py-1 px-2 w-100" name="name" id="name" placeholder="Name">
+                                </label>
+                                <label for="email" class="w-100">
+                                    <input type="email" class="py-1 px-2 w-100" name="email" id="email"
+                                        placeholder="E-Mail">
+                                </label>
+                                <label for="subject" class="w-100">
+                                    <input type="text" class="py-1 px-2 w-100" name="subject" id="subject"
+                                        placeholder="Subject">
+                                </label>
+                                <label for="message" class="w-100">
+                                    <textarea rows="5" class="w-100 py-1 px-2 w-100" name="message" id="message"
+                                        placeholder="Message"></textarea>
+                                </label>
+                                <label for="submit" class="py-2">
+                                    <button type="submit" class="button btn">SEND MESSAGE</button>
+                                </label>
+                            </form>
                         </div>
                     </div>
                 </div>
