--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                     <a href="https://twitter.com/me_veey?s=03" target="_blank" rel="noopener noreferrer" class="flex">
                         <i class="fa fa-twitter" aria-hidden="true"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/victoria-akpan-3726361b0" target="_blank" rel="noopener noreferrer" class="flex mid-a">
+                    <a href="https://www.linkedin.com/in/victoria-akpan-3726361b0" target="_blank"
+                        rel="noopener noreferrer" class="flex mid-a">
                         <i class="fa fa-linkedin" aria-hidden="true"></i>
                     </a>
                     <a href="https://github.com/veedahv" target="_blank" rel="noopener noreferrer" class="flex">
@@ -109,18 +110,22 @@
                         <div class="">
                             <div class="skill-card-contain flex">
                                 <div class="about-card-skill">
-                                    <div class="about-page-header">
-                                        <h2 class="skill-card-text">Soft skills</h2>
+                                    <div class="about-page-card">
+                                        <!-- <h2 class="skill-card-text">Soft skills</h2> -->
+                                        <!-- <p class="skill-card-text">Team work</p> -->
+                                        <img src="./images/web-research.svg" class="skill-card-text" alt="">
+                                    </div>
+                                    <div class="about-page-card">
+                                        <img src="./images/community.svg" class="skill-card-text" alt="">
                                         <!-- <p class="skill-card-text">Team work</p> -->
                                     </div>
                                     <div class="about-page-card">
-                                        <p class="skill-card-text">Team work</p>
+                                        <img src="./images/streaming.svg" class="skill-card-text" alt="">
+                                        <!-- <p class="skill-card-text">Team work</p> -->
                                     </div>
                                     <div class="about-page-card">
-                                        <p class="skill-card-text">Team work</p>
-                                    </div>
-                                    <div class="about-page-card">
-                                        <p class="skill-card-text">Team work</p>
+                                        <img src="./images/personal-development.svg" class="skill-card-text" alt="">
+                                        <!-- <p class="skill-card-text">Team work</p> -->
                                     </div>
                                 </div>
                             </div>
@@ -356,9 +361,9 @@
                             </div> -->
                         </div>
                         <div class="">
-                    <h1>Contact Me</h1>
-                    <p>Have an idea you want to bring to life?</p>
-                    <p>Or you want to say hi?</p>
+                            <h1>Contact Me</h1>
+                            <p>Have an idea you want to bring to life?</p>
+                            <p>Or you want to say hi?</p>
                             <p>Why not send me a message?</p>
                             <form action="post" class="text-center">
                                 <label for="name" class="w-100">
@@ -399,7 +404,8 @@
                                 class="">
                                 <i class="fa fa-twitter" aria-hidden="true"></i>
                             </a>
-                            <a href="https://www.linkedin.com/in/victoria-akpan-3726361b0" target="_blank" rel="noopener noreferrer" class="">
+                            <a href="https://www.linkedin.com/in/victoria-akpan-3726361b0" target="_blank"
+                                rel="noopener noreferrer" class="">
                                 <i class="fa fa-linkedin" aria-hidden="true"></i>
                             </a>
                             <a href="https://github.com/veedahv" target="_blank" rel="noopener noreferrer" class="">
@@ -408,7 +414,8 @@
                             <a href="http://" target="_blank" rel="noopener noreferrer" class="">
                                 <i class="fa fa-whatsapp" aria-hidden="true"></i>
                             </a>
-                            <a href="https://www.instagram.com/mhvee__e/" target="_blank" rel="noopener noreferrer" class="">
+                            <a href="https://www.instagram.com/mhvee__e/" target="_blank" rel="noopener noreferrer"
+                                class="">
                                 <i class="fa fa-instagram" aria-hidden="true"></i>
                             </a>
                         </div>
@@ -437,8 +444,8 @@
                     </div>
                 </div>
                 <div class="attribution">
-                    Icons made by 
-                    <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons">Flat Icons</a> from 
+                    Icons made by
+                    <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons">Flat Icons</a> from
                     <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
                 </div>
                 <!-- https://www.flaticon.com/search?word=team&author_id=190 -->
