--- a/index.html
+++ b/index.html
@@ -397,8 +397,6 @@
                         <div class="">
                             <h1>Feel Free To Connect With Me</h1>
                         </div>
-                        <!-- <div class="contact-info">
-                            <div class="contact-grid text-center"> -->
                         <div class="social-media-icons text-center">
                             <a href="https://twitter.com/me_veey?s=03" target="_blank" rel="noopener noreferrer"
                                 class="">
@@ -419,8 +417,20 @@
                                 <i class="fa fa-instagram" aria-hidden="true"></i>
                             </a>
                         </div>
-                        <!-- </div>
-                        </div> -->
+                    </div>
+                    <div class="direct-info">
+                        <p>
+                            Or you can 
+                                <span>
+                                    Call:
+                                    <a href="tel:+23470870050">+23470870050</a>
+                                    Or
+                                </span>
+                                <span>
+                                    Send a mail:
+                                    <a href="mailto:veedahv55@gmail.com">veedahv55@gmail.com</a>
+                                </span>
+                        </p>
                     </div>
                 </div>
             </div>
