--- a/index.html
+++ b/index.html
@@ -69,16 +69,15 @@
                         <small class="section-intro">FRONT-END WEB DEVELOPER</small>
                         <h1 class="name">Hello, I'm Victoria!</h1>
                         <p class="">
-                            <!-- <span class="career-spec">I am a <b>front-end web developer.</b></span> -->
-                            <span class="hom-intro">
+                            <span class="home-intro">
                                 I use HTML, CSS & Javascript to bring designs to life.
                                 I specialize in creating clean, fast and accessible websites using
                                 appropriate front-end technologies and techniques.
                             </span>
                         </p>
                         <div class="home-btn-contain">
-                            <a href="./assets/VICTORIA AKPAN RESUME.pdf" class="btn" download>Download Resume</a>
-                            <a href="" class="btn">Hire Me</a>
+                            <a href="./assets/VICTORIA AKPAN RESUME.pdf" class="home-btn btn" download>Resume</a>
+                            <a href="" class="home-btn btn">Hire Me</a>
                         </div>
                     </div>
                 </div>
@@ -90,8 +89,9 @@
                     <div class="flex about-card">
                         <div class=" ">
                             <div class="">
+                                <small class="section-intro">ABOUT ME</small>
                                 <h2 class="card-title headings p-1">
-                                    Want to know more about me?
+                                    More about me
                                 </h2>
                                 <p class="card-text">
                                     I am an undergraduate student of Computer Engineering at the University of Uyo.
@@ -182,6 +182,11 @@
                                 Education
                             </h2>
                         </div>
+                        <div class="certificate-img-contain">
+                            <div class="certificate-img">
+                                <img src="" class="w-100 view-certificate">
+                            </div>
+                        </div>
                         <div class="grid edu-grid">
                             <div class="card">
                                 <div class="card-body">
@@ -193,6 +198,8 @@
                                     <p class="edu-text">
                                         Start basic html and css skills.
                                     </p>
+                                    <img src="./assets/certificate/web responsive certificate.PNG"
+                                        class="w-100 certificate-img-tag" alt="web responsive certificate">
                                     <button type="button" class="certificate-btn">View Certificate</button>
                                 </div>
                             </div>
@@ -206,6 +213,8 @@
                                     <p class="edu-text">
                                         Responsive web designs
                                     </p>
+                                    <img src="./assets/certificate/web responsive certificate.PNG"
+                                        class="w-100 certificate-img-tag" alt="web responsive certificate">
                                     <button type="button" class="certificate-btn">View Certificate</button>
                                 </div>
                             </div>
@@ -219,6 +228,8 @@
                                     <p class="edu-text">
                                         Learnt front-end development at the roothub.
                                     </p>
+                                    <img src="./assets/certificate/web responsive certificate.PNG"
+                                        class="w-100 certificate-img-tag" alt="web responsive certificate">
                                     <button type="button" class="certificate-btn">View Certificate</button>
                                 </div>
                             </div>
@@ -232,6 +243,8 @@
                                     <p class="edu-text">
                                         Completed high school
                                     </p>
+                                    <img src="./assets/certificate/web responsive certificate.PNG"
+                                        class="w-100 certificate-img-tag" alt="web responsive certificate">
                                     <button type="button" class="certificate-btn">View Certificate</button>
                                 </div>
                             </div>
@@ -245,6 +258,8 @@
                                     <p class="edu-text">
                                         Studying for a B.Sc for Computer Engineering
                                     </p>
+                                    <img src="./assets/certificate/web responsive certificate.PNG"
+                                        class="w-100 certificate-img-tag" alt="web responsive certificate">
                                     <button type="button" class="certificate-btn">View Certificate</button>
                                 </div>
                             </div>
@@ -265,9 +280,11 @@
                         <div class="project-grid">
                             <div class="project-grid-card">
                                 <div>
-                                    <h2 class="headings">
+                                    <small class="section-intro">MY PROJECTS</small>
+                                    <!-- <h2 class="headings">
                                         Completed Projects
-                                    </h2>
+                                    </h2> -->
+                                    <p>Here are a few of my completed projects</p>
                                 </div>
                             </div>
                             <div class="project-grid-card project-card">
@@ -275,8 +292,9 @@
                                     <img src="./images/hotel-booking.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
                                         <h3 class="card-title p-1">Hotel Booking</h3>
-                                        <p class="card-text">
-                                            I created a hotel booking app using just html and css.</p>
+                                        <!-- <p class="card-text">
+                                            I created a hotel booking app using just html and css.
+                                        </p> -->
                                         <a href="https://best-tour-site.netlify.app/" class="btn">Live Demo</a>
                                     </div>
                                 </div>
@@ -286,9 +304,9 @@
                                     <img src="./images/budget-app.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
                                         <h3 class="card-title p-1">Budget App</h3>
-                                        <p class="card-text">
+                                        <!-- <p class="card-text">
                                             I created a shopping list budget app using html, css and js.
-                                        </p>
+                                        </p> -->
                                         <a href="https://shopping-list-budget.netlify.app/" class="btn">Live Demo</a>
                                     </div>
                                 </div>
@@ -298,10 +316,10 @@
                                     <img src="./images/weather-app.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
                                         <h3 class="card-title p-1">Dashboard</h3>
-                                        <p class="card-text">
+                                        <!-- <p class="card-text">
                                             I implemented a dashboard using html, css, bootstrap and js.
                                             In this project, I made us of local stoeage to store variables.
-                                        </p>
+                                        </p> -->
                                         <a href="https://vee-ecommerce-dashboard.netlify.app/" class="btn">Live Demo</a>
                                     </div>
                                 </div>
@@ -311,9 +329,9 @@
                                     <img src="./images/weather-app.jpg" class="h-100 w-100" alt="...">
                                     <div class="card-details w-100">
                                         <h3 class="card-title p-1">Weather App</h3>
-                                        <p class="card-text">
+                                        <!-- <p class="card-text">
                                             I made use of api in this site.
-                                        </p>
+                                        </p> -->
                                         <a href="https://veedahv-weather-app.netlify.app/" class="btn">Live Demo</a>
                                     </div>
                                 </div>
@@ -394,10 +412,10 @@
             <div class="container">
                 <div class="contact-info ">
                     <div class="flex connect-info-contain">
-                        <div class="">
+                        <div class="my">
                             <h1>Feel Free To Connect With Me</h1>
                         </div>
-                        <div class="social-media-icons text-center">
+                        <div class="social-media-icons my">
                             <a href="https://twitter.com/me_veey?s=03" target="_blank" rel="noopener noreferrer"
                                 class="">
                                 <i class="fa fa-twitter" aria-hidden="true"></i>
@@ -420,16 +438,10 @@
                     </div>
                     <div class="direct-info">
                         <p>
-                            Or you can 
-                                <span>
-                                    Call:
-                                    <a href="tel:+23470870050">+23470870050</a>
-                                    Or
-                                </span>
-                                <span>
-                                    Send a mail:
-                                    <a href="mailto:veedahv55@gmail.com">veedahv55@gmail.com</a>
-                                </span>
+                            Or you can Call:
+                            <a href="tel:+23470870050">+23470870050</a>
+                            Or Send a mail:
+                            <a href="mailto:veedahv55@gmail.com">veedahv55@gmail.com</a>
                         </p>
                     </div>
                 </div>
@@ -439,7 +451,7 @@
     <footer class=" py-4">
         <div class="container">
             <div class="flex footer-div">
-                <div class="">
+                <!-- <div class="">
                     <div class="">
                         <p>
                             Call:
@@ -452,7 +464,7 @@
                             <a href="mailto:veedahv55@gmail.com">veedahv55@gmail.com</a>
                         </p>
                     </div>
-                </div>
+                </div> -->
                 <div class="attribution">
                     Icons made by
                     <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons">Flat Icons</a> from
@@ -460,7 +472,7 @@
                 </div>
                 <!-- https://www.flaticon.com/search?word=team&author_id=190 -->
                 <p class="text-center">
-                    &#169; Veedah || 2020
+                    &#169; <a class="brand" href="index.html">Veedah</a> || 2020
                 </p>
             </div>
         </div>
