--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="">
             <nav class="flex w-100">
                 <a class="brand" href="index.html">Veedah</a>
-                <!-- <button class="" id="hamburger-btn">
+                <button class="" id="hamburger-btn">
                     <span class="">
                         <div class="hamburger" id="hamburger">
                             <span class="line"></span>
@@ -27,7 +27,7 @@
                             <span class="line"></span>
                         </div>
                     </span>
-                </button> -->
+                </button>
                 <div class="ml-auto mobile-none desktop-nav" id="">
                     <div class="navbar-nav">
                         <a class="nav-link home-page active" href="index.html">Home</span></a>
@@ -66,6 +66,7 @@
             <div class="container h-100">
                 <div class="home-page-container flex h-100">
                     <div class="">
+                        <img src="./images/userImg.jpg" class="home-img" alt="">
                         <small class="section-intro">FRONT-END WEB DEVELOPER</small>
                         <h1 class="name">Hello, I'm Victoria!</h1>
                         <p class="">
