--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="home-page-container flex h-100">
                     <div class="">
                         <img src="./images/userImg.jpg" class="home-img" alt="">
-                        <small class="section-intro">FRONT-END WEB DEVELOPER</small>
+                        <small class="home-section-intro">FRONT-END WEB DEVELOPER</small>
                         <h1 class="name">Hello, I'm Victoria!</h1>
                         <p class="">
                             <span class="home-intro">
@@ -77,8 +77,14 @@
                             </span>
                         </p>
                         <div class="home-btn-contain">
-                            <a href="./assets/VICTORIA AKPAN RESUME.pdf" class="home-btn btn" download>Resume</a>
-                            <a href="" class="home-btn btn">Hire Me</a>
+                            <a href="./assets/VICTORIA AKPAN RESUME.pdf" class="home-btn btn" download>
+                                <i class="fa fa-download" aria-hidden="true"></i>
+                                Resume
+                            </a>
+                            <a href="" class="home-btn btn">
+                                <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+                                Hire Me
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -185,11 +191,11 @@
                         </div>
                         <div class="certificate-img-contain">
                             <div class="certificate-img">
-                                <img src="" class="w-100 view-certificate">
+                                <img class="w-100 view-certificate">
                             </div>
                         </div>
                         <div class="grid edu-grid">
-                            <div class="card">
+                            <div class="edu-card card">
                                 <div class="card-body">
                                     <div class="edu-head flex">
                                         <h3 class="edu-title">Tech 101</h3>
@@ -204,7 +210,7 @@
                                     <button type="button" class="certificate-btn">View Certificate</button>
                                 </div>
                             </div>
-                            <div class="card">
+                            <div class="edu-card card">
                                 <div class="card-body">
                                     <div class="edu-head flex">
                                         <h3 class="edu-title">FreeCodeCamp</h3>
@@ -219,7 +225,7 @@
                                     <button type="button" class="certificate-btn">View Certificate</button>
                                 </div>
                             </div>
-                            <div class="card">
+                            <div class="edu-card card">
                                 <div class="card-body">
                                     <div class="edu-head flex">
                                         <h3 class="edu-title">Web development</h3>
@@ -234,7 +240,7 @@
                                     <button type="button" class="certificate-btn">View Certificate</button>
                                 </div>
                             </div>
-                            <div class="card">
+                            <div class="edu-card card">
                                 <div class="card-body">
                                     <div class="edu-head flex">
                                         <h3 class="edu-title">TISS</h3>
@@ -249,7 +255,7 @@
                                     <button type="button" class="certificate-btn">View Certificate</button>
                                 </div>
                             </div>
-                            <div class="card">
+                            <div class="edu-card card">
                                 <div class="card-body">
                                     <div class="edu-head flex">
                                         <h3 class="edu-title">University of Uyo</h3>
